[package]
name = "rclrs-msg-build-helper"
version = "0.1.0"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
repository = "https://github.com/ros2rust/ros2rust"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
rclrs-msg-parser = { path = "../rclrs-msg-parser", version = "0.1.0" }
rclrs-msg-types = { path = "../rclrs-msg-types", version = "0.1.0" }
