[package]
name = "rclrs-msg-parser"
version = "0.1.0"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
repository = "https://github.com/ros2rust/ros2rust"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
nom = "6"
rclrs-msg-types = { path = "../rclrs-msg-types", version = "0.1.0" }
regex = "1"
thiserror = "1"
