[package]
name = "rclrs-msg-types"
version = "0.1.0"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
repository = "https://github.com/ros2rust/ros2rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
