[package]
name = "rclrs-msg"
version = "0.1.0"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
repository = "https://github.com/ros2rust/ros2rust"
license = "Apache-2.0"

[dependencies]
rclrs-msg-core = { path = "../rclrs-msg-core", version = "0.1.0" }

[build-dependencies]
heck = "0.3"
rclrs-msg-build-helper = { path = "../rclrs-msg-build-helper", version = "0.1.0" }
rclrs-msg-core = { path = "../rclrs-msg-core", version = "0.1.0" }
rclrs-msg-parser = { path = "../rclrs-msg-parser", version = "0.1.0" }
rclrs-msg-types = { path = "../rclrs-msg-types", version = "0.1.0" }
sailfish = "0.3"
