[package]
name = "rclrust-msg"
version = "0.0.1"
edition = "2018"
authors = ["Yuma Hiramatsu <yuma.hiramatsu@gmail.com>"]
repository = "https://github.com/ros2rust/ros2rust"
license = "Apache-2.0"

[dependencies]
rclrust-msg-core = { path = "../rclrust-msg-core", version = "0.0.1" }

[build-dependencies]
heck = "0.3"
rclrust-msg-build-helper = { path = "../rclrust-msg-build-helper", version = "0.0.1" }
rclrust-msg-core = { path = "../rclrust-msg-core", version = "0.0.1" }
rclrust-msg-parser = { path = "../rclrust-msg-parser", version = "0.0.1" }
rclrust-msg-types = { path = "../rclrust-msg-types", version = "0.0.1" }
sailfish = "0.3"
